defect NYCCHKBK-10629 - Fix alignment for columns

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -2002,6 +2002,25 @@ td.number div {
 td.number-center {
     text-align: center;
 }
+
+td.text.full-width-center div{
+    width: 100%;
+    text-align: center;
+}
+
+td.text.width-90-percent-center div {
+    width: 90%;
+    text-align: center;
+}
+
+td.margin-left-text-15 div{
+    margin-left: 15px;
+}
+
+td.margin-left-text-25 div{
+    margin-left: 25px;
+}
+
 table.dataTable tr.even,
 table.outerTable.ma-history tr.even{
     background-color: #f8f8f8;
